Resolving missing module (#167)
* Test with multiple jdk verisons in travis

Need to symlink the system CA certificates if necessary.
on openjdk9+.
openjdk9 is allowed to fail because of its fragility.
See more: athttps://www.deps.co/guides/travis-ci-latest-java/

* Resolving missing module

This from this eclipse version a newer java support is enabled.
See more at: https://projects.eclipse.org/projects/eclipse/releases/4.8.0

Bumped Tycho to 1.4.0.
Added Javax.annotation bundle to target platform.
Added vmargs to the integration test pom.xml.
Added profiles to jdk 8, 9, 10 & 11.

Fix for the missing dependency with java 11 in the integration test phase.
Referenced in:
* https://wiki.eclipse.org/Tycho/Release_Notes/1.4
* https://bugs.eclipse.org/bugs/show_bug.cgi?id=541403