@@ -13,37 +13,177 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>eclipse-test-plugin</packaging>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.eclipse.tycho</groupId>
-                <artifactId>target-platform-configuration</artifactId>
-                <version>${tycho.version}</version>
-                <configuration>
-                    <dependency-resolution>
-                        <extraRequirements>
-                            <requirement>
-                                <type>eclipse-feature</type>
-                                <id>org.eclipse.cdt</id>
-                                <versionRange>0.0.0</versionRange>
-                            </requirement>
-                        </extraRequirements>
-                    </dependency-resolution>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.eclipse.tycho</groupId>
-                <artifactId>tycho-surefire-plugin</artifactId>
-                <version>${tycho.version}</version>
-                <configuration>
-                    <useUIHarness>true</useUIHarness>
-                    <useUIThread>false</useUIThread>
-                    <product>org.codechecker.eclipse.feature</product>
-                    <application>org.eclipse.ui.ide.workbench</application>
-                    <testClass>org.codechecker.eclipse.plugin.AllTests</testClass>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    <profiles>
+        <profile>
+            <id>active-on-jdk-8</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>target-platform-configuration</artifactId>
+                        <version>${tycho.version}</version>
+                        <configuration>
+                            <dependency-resolution>
+                                <extraRequirements>
+                                    <requirement>
+                                        <type>eclipse-feature</type>
+                                        <id>org.eclipse.cdt</id>
+                                        <versionRange>0.0.0</versionRange>
+                                    </requirement>
+                                </extraRequirements>
+                            </dependency-resolution>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>tycho-surefire-plugin</artifactId>
+                        <version>${tycho.version}</version>
+                        <configuration>
+                            <useUIHarness>true</useUIHarness>
+                            <useUIThread>false</useUIThread>
+                            <product>org.codechecker.eclipse.feature</product>
+                            <application>org.eclipse.ui.ide.workbench</application>
+                            <testClass>org.codechecker.eclipse.plugin.AllTests</testClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>active-on-jdk-9</id>
+            <activation>
+                <jdk>9</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>target-platform-configuration</artifactId>
+                        <version>${tycho.version}</version>
+                        <configuration>
+                            <dependency-resolution>
+                                <extraRequirements>
+                                    <requirement>
+                                        <type>eclipse-feature</type>
+                                        <id>org.eclipse.cdt</id>
+                                        <versionRange>0.0.0</versionRange>
+                                    </requirement>
+                                    <!--requirement>
+                                        <type>eclipse-plugin</type>
+                                        <id>javax.annotation</id>
+                                        <versionRange>0.0.0</versionRange>
+                                    </requirement-->
+                                </extraRequirements>
+                            </dependency-resolution>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>tycho-surefire-plugin</artifactId>
+                        <version>${tycho.version}</version>
+                        <configuration>
+                            <useUIHarness>true</useUIHarness>
+                            <useUIThread>false</useUIThread>
+                            <argLine>--add-modules=java.se.ee</argLine>
+                            <product>org.codechecker.eclipse.feature</product>
+                            <application>org.eclipse.ui.ide.workbench</application>
+                            <testClass>org.codechecker.eclipse.plugin.AllTests</testClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>active-on-jdk-10</id>
+            <activation>
+                <jdk>10</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>target-platform-configuration</artifactId>
+                        <version>${tycho.version}</version>
+                        <configuration>
+                            <dependency-resolution>
+                                <extraRequirements>
+                                    <requirement>
+                                        <type>eclipse-feature</type>
+                                        <id>org.eclipse.cdt</id>
+                                        <versionRange>0.0.0</versionRange>
+                                    </requirement>
+                                    <!--requirement>
+                                        <type>eclipse-plugin</type>
+                                        <id>javax.annotation</id>
+                                        <versionRange>1.2.0</versionRange>
+                                    </requirement-->
+                                </extraRequirements>
+                            </dependency-resolution>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>tycho-surefire-plugin</artifactId>
+                        <version>${tycho.version}</version>
+                        <configuration>
+                            <useUIHarness>true</useUIHarness>
+                            <useUIThread>false</useUIThread>
+                            <argLine>--add-modules=ALL-SYSTEM</argLine>
+                            <product>org.codechecker.eclipse.feature</product>
+                            <application>org.eclipse.ui.ide.workbench</application>
+                            <testClass>org.codechecker.eclipse.plugin.AllTests</testClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>active-on-jdk-11</id>
+            <activation>
+                <jdk>11</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>target-platform-configuration</artifactId>
+                        <version>${tycho.version}</version>
+                        <configuration>
+                            <dependency-resolution>
+                                <extraRequirements>
+                                    <requirement>
+                                        <type>eclipse-feature</type>
+                                        <id>org.eclipse.cdt</id>
+                                        <versionRange>0.0.0</versionRange>
+                                    </requirement>
+                                    <requirement>
+                                        <type>eclipse-plugin</type>
+                                        <id>javax.annotation</id>
+                                        <versionRange>1.2.0</versionRange>
+                                    </requirement>
+                                </extraRequirements>
+                            </dependency-resolution>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>tycho-surefire-plugin</artifactId>
+                        <version>${tycho.version}</version>
+                        <configuration>
+                            <useUIHarness>true</useUIHarness>
+                            <useUIThread>false</useUIThread>
+                            <argLine>--add-modules=ALL-SYSTEM</argLine>
+                            <product>org.codechecker.eclipse.feature</product>
+                            <application>org.eclipse.ui.ide.workbench</application>
+                            <testClass>org.codechecker.eclipse.plugin.AllTests</testClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
